--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover" />
   <title>Vite + Vue + TS</title>
-  <link rel="stylesheet" href="/src/assets/css/reset.css">
+  <link rel="stylesheet" href="/public-css/reset.css">
 </head>
 
 <body>
